Upgraded to Logstash 2.1.0.

--- a/config/logstash.conf
+++ b/config/logstash.conf
@@ -1,17 +1,7 @@
-input {
-  lumberjack {
-    port => 5043
-    ssl_certificate => "/logstash/certs/logstash-forwarder.crt"
-    ssl_key => "/logstash/certs/logstash-forwarder.key"
-    type => "lumberjack"
-  }
-}
+input { stdin { } }
 
 output {
   elasticsearch {
-    cluster => "my-cluster"
-    protocol => "http"
-    host => "localhost"
-    port => "9200"
+    hosts => ["localhost:9200"]
   }
 }
